# inso-bootstrap-cli

./: .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  240816-v4-tk-config-sketch.yml  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.debug  MIGRATION_NOTES_v2_to_v3.md  POETRY_ON_WINDOWS.md  Procfile  README.md  action.yml  azure-action.yml  bootstrap-cli  diagram.txt  docker-bootstrap-entrypoint.sh  pyproject.toml  src_bootstrap.md
.github/workflows/: bump.yaml  ci.yaml  ci.yml  code-quality.yaml  deploy_bootstrap.yml  test_and_build.yml
configs/: config-delete-example.yml  config-deploy-example-v2.yml  config-deploy-example-v3.yml  config-deploy-ice-cream-opt1.yml  config-deploy-ice-cream-opt2.yml  config-deploy-ice-cream.yml  config-simple-v1.yaml  config-simple-v2-draft.yml  config-simple-v2-jfw.yml  test-bootstrap-delete-example.yml  test-bootstrap-deploy-example.yml  test-bootstrap-example.yml  test-dev-extpipes.yml  test-trading-bootstrap.yml
fdm_sdk_inject/: README.md
fdm_sdk_inject/_api/data_model_storages/: __init__.py  spaces.py
fdm_sdk_inject/_api/models/: __init__.py  spaces.py
fdm_sdk_inject/data_classes/data_model_storages/: spaces.py
incubator/bootstrap_cli/: __init__.py  __main__.py  app_cache.py  app_config.py  app_container.py  configuration.py
incubator/bootstrap_cli/commands/: base.py  delete.py  deploy.py  diagram.py  prepare.py
incubator/bootstrap_cli/commands/mermaid_generator/: mermaid.py
incubator/bootstrap_cli/mermaid_generator/: mermaid.py
incubator/extpipes_cli/: __main__.py
incubator/fdm_sdk_inject/_api/data_model_storages/: __init__.py  spaces.py
incubator/fdm_sdk_inject/data_classes/data_model_storages/: spaces.py
pack/: build.sh  run.sh
src/: __main__.py  app_config.py  app_container.py
src/bootstrap/: __init__.py  __main__.py  app_cache.py  app_config.py  app_container.py  app_exceptions.py
src/bootstrap/commands/: 230416-diagram-rework-notes.md  base.py  delete.py  deploy.py  diagram.py  export_to_cdftk.py  prepare.py
src/bootstrap/commands/diagram_utils/: mermaid.py
src/bootstrap/common/: base_model.py  cognite_client.py
src/commands/: prepare.py
src/common/: cognite_client.py
src/fdm_sdk_inject/_api/data_model_storages/: spaces.py
src/fdm_sdk_inject/_api/models/: __init__.py  spaces.py
src/fdm_sdk_inject/data_classes/models/: spaces.py
src/tk-generator/: README.md  __init__.py  tk_generator_config.py
src/tk-generator/common/: base_model.py
src/tk-generator/config/: 240816-v4-tk-config-sketch.yml
tests/: constants.py  depr_test_config.py  test_app_configs.py  test_config.py  test_configfiles.py
tests/example/: .env_mock  config-delete-example-03.0.yml  config-deploy-bootstrap.yml  config-deploy-example-01.0.yml  config-deploy-example-01.1.yml  config-deploy-example-01.2.yml  config-deploy-example-01.3.yml  config-deploy-example-01.4.yml  config-diagram-example-02.0.yml  config-prepare-example-00.0.yml
