[tool.poetry]
name = "inso-bootstrap-cli"
# 230802 pa: switched to keep manually in sync with
# 1. src/bootstrap/__init__.py => __version__ = "3.0.6"
# 2. action.yml => image: docker://cognite/bootstrap-cli:v3.0.6-github
version = "3.0.6"
description = "A CLI to deploy a CDF Project to bootstrap CDF Groups scoped with Data Sets and RAW DBs"
authors = ["Peter Arwanitis <peter.arwanitis@cognite.com>", "Tugce Ozgur Oztetik <tugce.oztetik@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/inso-bootstrap-cli"

packages = [
    { include="bootstrap", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
pydantic = "^1.10.4"
dependency-injector = {version = "^4.41.0", extras = ["yaml"]}
click = "^8.1.3"
cognite-sdk = {version = "^6.2", extras = ["pandas"]}
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
mypy = "^0.991"
pre-commit = "^3.0.0"
pytest = "^7.2.1"

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s"
# testpaths = [
    # "tests",
# ]

[tool.poetry.scripts]
bootstrap-cli = "bootstrap.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = [
"pyproject.toml:tool.poetry.version"
]
version_variable = [
    "src/bootstrap/__init__.py:__version__",
]
