[tool.poetry]
name = "inso-bootstrap-cli"
# 230802 pa: switched to keep manually in sync with
# 1. src/bootstrap/__init__.py => __version__ = "3.0.6"
# 2. action.yml => image: docker://cognite/bootstrap-cli:v3.0.6
version = "3.3.0"
description = "A CLI to deploy a CDF Project to bootstrap CDF Groups scoped with Data Sets and RAW DBs"
authors = ["Peter Arwanitis <peter.arwanitis@cognite.com>", "Tugce Ozgur Oztetik <tugce.oztetik@cognite.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cognitedata/inso-bootstrap-cli"

packages = [
    { include="bootstrap", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
pydantic-settings = "^2"
dependency-injector = {version = "^4.41.0", extras = ["yaml"]}
click = "^8.1.6"
cognite-sdk = {version = "^7", extras = ["pandas"]}
rich = "^13.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
mypy = "^1.5"
pre-commit = "^3.3"
pytest = "^7.4"

[tool.black]
line-length = 120
target_version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s"
pythonpath = ["src"]
testpaths = ["tests"] # , "src/bootstrap"


[tool.poetry.scripts]
bootstrap-cli = "bootstrap.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_toml = [
"pyproject.toml:tool.poetry.version"
]
version_variable = [
    "src/bootstrap/__init__.py:__version__",
]
